@@ -15,6 +15,8 @@ SHMEDIA_WITH_SHMEDIA_DIR
 
 WX_FIND_WX_CONFIG
 
+GL_WITH_GL_DIR
+
 AC_CONFIG_FILES([Makefile
 		 src/Makefile])
 AC_OUTPUT
