@@ -1,3 +1,10 @@
+2004-03-04  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
+
+	* src/Texter.cpp: Sh has a "Hello World" program now.
+
+	* src/ShrikeCanvas.cpp (usingShaders): Only enabled
+	GL_VERTEX_PROGRAM and GL_FRAGMENT_PROGRAM when a shader is set.
+
 2004-03-01  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
 	* src/UniformPanel.cpp: Much better animation.
